Assignment4/Ass4/Ass4/y.output
Terminals unused in grammar

   COMMENT
   TILDA
   NEGATION
   HASH
   NEWLINE
   UNKNOWN


State 165 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 primary_expression: IDENTIFIER
    4                   | INT_NO
    5                   | FLOAT_NO
    6                   | CHARACTER
    7                   | STRING
    8                   | LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE

    9 postfix_expression: primary_expression
   10                   | primary_expression LEFT_SQUARE_BRACE expression RIGHT_SQUARE_BRACE LEFT_SQUARE_BRACE expression RIGHT_SQUARE_BRACE
   11                   | postfix_expression LEFT_ROUND_BRACE RIGHT_ROUND_BRACE
   12                   | postfix_expression LEFT_ROUND_BRACE argument_expression_list RIGHT_ROUND_BRACE
   13                   | postfix_expression PERIOD IDENTIFIER
   14                   | postfix_expression ARROW IDENTIFIER
   15                   | postfix_expression INCREMENT
   16                   | postfix_expression DECREMENT
   17                   | postfix_expression TRANSPOSE

   18 argument_expression_list: assignment_expression
   19                         | argument_expression_list COMMA assignment_expression

   20 unary_expression: postfix_expression
   21                 | INCREMENT unary_expression
   22                 | DECREMENT unary_expression
   23                 | unary_operator cast_expression

   24 unary_operator: AMPERSAND
   25               | MULTIPLY
   26               | ADD
   27               | SUBTRACT

   28 cast_expression: unary_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression MULTIPLY cast_expression
   31                          | multiplicative_expression DIVIDE cast_expression
   32                          | multiplicative_expression PERCENTILE cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression ADD multiplicative_expression
   35                    | additive_expression SUBTRACT multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_SHIFT additive_expression
   38                 | shift_expression RIGHT_SHIFT additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression LESS_THAN shift_expression
   41                      | relational_expression GREATER_THAN shift_expression
   42                      | relational_expression GREATER_THAN_EQUALTO shift_expression
   43                      | relational_expression LESS_THAN_EQUALTO shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression DOUBLE_EQUAL relational_expression
   46                    | equality_expression NOT_EQUAL relational_expression

   47 AND_expression: equality_expression
   48               | AND_expression AMPERSAND equality_expression

   49 exclusive_or_expression: AND_expression
   50                        | exclusive_or_expression XOR AND_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression OR exclusive_or_expression

   53 logical_AND_expression: inclusive_or_expression
   54                       | logical_AND_expression BINARY_AND M inclusive_or_expression

   55 logical_OR_expression: logical_AND_expression
   56                      | logical_OR_expression BINARY_OR M logical_AND_expression

   57 conditional_expression: logical_OR_expression
   58                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   59 assignment_expression: conditional_expression
   60                      | unary_expression assignment_operator assignment_expression

   61 assignment_operator: EQUAL
   62                    | STAR_EQUAL
   63                    | SLASH_EQUAL
   64                    | PERCENTILE_EQUAL
   65                    | PLUS_EQUAL
   66                    | MINUS_EQUAL
   67                    | LEFT_SHIFT_EQUAL
   68                    | RIGHT_SHIFT_EQUAL
   69                    | AND_EQUAL
   70                    | XOR_EQUAL
   71                    | OR_EQUAL

   72 expression: assignment_expression
   73           | expression COMMA assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers SEMI_COLON
   76            | declaration_specifiers init_declarator_list SEMI_COLON

   77 declaration_specifiers: type_specifier
   78                       | type_specifier declaration_specifiers

   79 init_declarator_list: init_declarator
   80                     | init_declarator_list COMMA init_declarator

   81 init_declarator: declarator
   82                | declarator EQUAL initializer

   83 type_specifier: VOID
   84               | CHAR
   85               | SHORT
   86               | INT
   87               | LONG
   88               | FLOAT
   89               | DOUBLE
   90               | MATRIX
   91               | SIGNED
   92               | UNSIGNED
   93               | BOOL

   94 declarator: pointer direct_declarator
   95           | direct_declarator

   96 direct_declarator: IDENTIFIER
   97                  | LEFT_ROUND_BRACE declarator RIGHT_ROUND_BRACE
   98                  | direct_declarator LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE
   99                  | direct_declarator LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE
  100                  | direct_declarator LEFT_SQUARE_BRACE RIGHT_SQUARE_BRACE
  101                  | direct_declarator LEFT_ROUND_BRACE parameter_type_list RIGHT_ROUND_BRACE
  102                  | direct_declarator LEFT_ROUND_BRACE identifier_list RIGHT_ROUND_BRACE
  103                  | direct_declarator LEFT_ROUND_BRACE RIGHT_ROUND_BRACE

  104 pointer: MULTIPLY
  105        | MULTIPLY pointer

  106 parameter_type_list: parameter_list

  107 parameter_list: parameter_declaration
  108               | parameter_list COMMA parameter_declaration

  109 parameter_declaration: declaration_specifiers declarator
  110                      | declaration_specifiers

  111 identifier_list: IDENTIFIER
  112                | identifier_list COMMA IDENTIFIER

  113 initializer: assignment_expression
  114            | LEFT_CURLY_BRACE initializer_row_list RIGHT_CURLY_BRACE

  115 initializer_row_list: initializer_row
  116                     | initializer_row_list SEMI_COLON initializer_row

  117 initializer_row: designation initializer
  118                | initializer
  119                | initializer_row COMMA initializer
  120                | initializer_row COMMA designation initializer

  121 designation: designator_list EQUAL

  122 designator_list: designator
  123                | designator_list designator

  124 designator: LEFT_SQUARE_BRACE constant_expression RIGHT_SQUARE_BRACE
  125           | PERIOD IDENTIFIER

  126 statement: labeled_statement
  127          | compound_statement
  128          | expression_statement
  129          | selection_statement
  130          | iteration_statement
  131          | jump_statement

  132 labeled_statement: IDENTIFIER COLON statement
  133                  | CASE constant_expression COLON statement
  134                  | DEFAULT COLON statement

  135 compound_statement: LEFT_CURLY_BRACE block_item_list_opt RIGHT_CURLY_BRACE

  136 block_item_list_opt: %empty
  137                    | block_item_list

  138 block_item_list: block_item
  139                | block_item_list M block_item

  140 block_item: declaration
  141           | statement

  142 expression_statement: expression SEMI_COLON

  143 selection_statement: IF LEFT_ROUND_BRACE expression N RIGHT_ROUND_BRACE M statement N
  144                    | IF LEFT_ROUND_BRACE expression N RIGHT_ROUND_BRACE M statement N ELSE M statement
  145                    | SWITCH LEFT_ROUND_BRACE expression RIGHT_ROUND_BRACE statement

  146 iteration_statement: WHILE M LEFT_ROUND_BRACE expression N RIGHT_ROUND_BRACE M statement
  147                    | DO M statement M WHILE LEFT_ROUND_BRACE expression N RIGHT_ROUND_BRACE SEMI_COLON
  148                    | FOR LEFT_ROUND_BRACE expression_statement M expression_statement N M expression_opt N RIGHT_ROUND_BRACE M statement
  149                    | FOR LEFT_ROUND_BRACE declaration expression_statement expression_opt RIGHT_ROUND_BRACE statement

  150 jump_statement: GOTO IDENTIFIER SEMI_COLON
  151               | CONTINUE SEMI_COLON
  152               | BREAK SEMI_COLON
  153               | RETURN SEMI_COLON
  154               | RETURN expression SEMI_COLON

  155 expression_opt: %empty
  156               | expression

  157 translation_unit: external_declaration
  158                 | translation_unit external_declaration

  159 external_declaration: function_definition
  160                     | declaration

  161 function_definition: declaration_specifiers declarator declaration_list compound_statement
  162                    | declaration_specifiers declarator O compound_statement

  163 declaration_list: declaration
  164                 | declaration_list declaration

  165 O: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
BREAK (258) 152
CASE (259) 133
CHAR (260) 84
CONTINUE (261) 151
DEFAULT (262) 134
DO (263) 147
DOUBLE (264) 89
SHORT (265) 85
LONG (266) 87
ELSE (267) 144
FLOAT (268) 88
FOR (269) 148 149
GOTO (270) 150
IF (271) 143 144
INT (272) 86
RETURN (273) 153 154
SIGNED (274) 91
SWITCH (275) 145
UNSIGNED (276) 92
VOID (277) 83
WHILE (278) 146 147
BOOL (279) 93
MATRIX (280) 90
COMMENT (281)
IDENTIFIER (282) 3 13 14 96 111 112 125 132 150
INT_NO (283) 4
FLOAT_NO (284) 5
CHARACTER (285) 6
STRING (286) 7
LEFT_SQUARE_BRACE (287) 10 98 99 100 124
RIGHT_SQUARE_BRACE (288) 10 98 99 100 124
LEFT_ROUND_BRACE (289) 8 11 12 97 101 102 103 143 144 145 146 147 148
    149
RIGHT_ROUND_BRACE (290) 8 11 12 97 101 102 103 143 144 145 146 147
    148 149
LEFT_CURLY_BRACE (291) 114 135
RIGHT_CURLY_BRACE (292) 114 135
PERIOD (293) 13 125
ARROW (294) 14
INCREMENT (295) 15 21
DECREMENT (296) 16 22
AMPERSAND (297) 24 48
MULTIPLY (298) 25 30 104 105
ADD (299) 26 34
SUBTRACT (300) 27 35
TILDA (301)
NEGATION (302)
DIVIDE (303) 31
PERCENTILE (304) 32
LEFT_SHIFT (305) 37
RIGHT_SHIFT (306) 38
LESS_THAN (307) 40
GREATER_THAN (308) 41
LESS_THAN_EQUALTO (309) 43
GREATER_THAN_EQUALTO (310) 42
DOUBLE_EQUAL (311) 45
NOT_EQUAL (312) 46
XOR (313) 50
OR (314) 52
BINARY_AND (315) 54
BINARY_OR (316) 56
QUESTION_MARK (317) 58
COLON (318) 58 132 133 134
SEMI_COLON (319) 75 76 116 142 147 150 151 152 153 154
EQUAL (320) 61 82 121
STAR_EQUAL (321) 62
SLASH_EQUAL (322) 63
PERCENTILE_EQUAL (323) 64
PLUS_EQUAL (324) 65
MINUS_EQUAL (325) 66
LEFT_SHIFT_EQUAL (326) 67
RIGHT_SHIFT_EQUAL (327) 68
AND_EQUAL (328) 69
XOR_EQUAL (329) 70
OR_EQUAL (330) 71
COMMA (331) 19 73 80 108 112 119 120
HASH (332)
TRANSPOSE (333) 17
NEWLINE (334)
UNKNOWN (335)
IF_CONFLICT (336)


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
M (83)
    on left: 1, on right: 54 56 58 139 143 144 146 147 148
N (84)
    on left: 2, on right: 58 143 144 146 147 148
primary_expression (85)
    on left: 3 4 5 6 7 8, on right: 9 10
postfix_expression (86)
    on left: 9 10 11 12 13 14 15 16 17, on right: 11 12 13 14 15 16
    17 20
argument_expression_list (87)
    on left: 18 19, on right: 12 19
unary_expression (88)
    on left: 20 21 22 23, on right: 21 22 28 60
unary_operator (89)
    on left: 24 25 26 27, on right: 23
cast_expression (90)
    on left: 28, on right: 23 29 30 31 32
multiplicative_expression (91)
    on left: 29 30 31 32, on right: 30 31 32 33 34 35
additive_expression (92)
    on left: 33 34 35, on right: 34 35 36 37 38
shift_expression (93)
    on left: 36 37 38, on right: 37 38 39 40 41 42 43
relational_expression (94)
    on left: 39 40 41 42 43, on right: 40 41 42 43 44 45 46
equality_expression (95)
    on left: 44 45 46, on right: 45 46 47 48
AND_expression (96)
    on left: 47 48, on right: 48 49 50
exclusive_or_expression (97)
    on left: 49 50, on right: 50 51 52
inclusive_or_expression (98)
    on left: 51 52, on right: 52 53 54
logical_AND_expression (99)
    on left: 53 54, on right: 54 55 56
logical_OR_expression (100)
    on left: 55 56, on right: 56 57 58
conditional_expression (101)
    on left: 57 58, on right: 58 59 74
assignment_expression (102)
    on left: 59 60, on right: 18 19 60 72 73 98 99 113
assignment_operator (103)
    on left: 61 62 63 64 65 66 67 68 69 70 71, on right: 60
expression (104)
    on left: 72 73, on right: 8 10 58 73 142 143 144 145 146 147 154
    156
constant_expression (105)
    on left: 74, on right: 124 133
declaration (106)
    on left: 75 76, on right: 140 149 160 163 164
declaration_specifiers (107)
    on left: 77 78, on right: 75 76 78 109 110 161 162
init_declarator_list (108)
    on left: 79 80, on right: 76 80
init_declarator (109)
    on left: 81 82, on right: 79 80
type_specifier (110)
    on left: 83 84 85 86 87 88 89 90 91 92 93, on right: 77 78
declarator (111)
    on left: 94 95, on right: 81 82 97 109 161 162
direct_declarator (112)
    on left: 96 97 98 99 100 101 102 103, on right: 94 95 98 99 100
    101 102 103
pointer (113)
    on left: 104 105, on right: 94 105
parameter_type_list (114)
    on left: 106, on right: 101
parameter_list (115)
    on left: 107 108, on right: 106 108
parameter_declaration (116)
    on left: 109 110, on right: 107 108
identifier_list (117)
    on left: 111 112, on right: 102 112
initializer (118)
    on left: 113 114, on right: 82 117 118 119 120
initializer_row_list (119)
    on left: 115 116, on right: 114 116
initializer_row (120)
    on left: 117 118 119 120, on right: 115 116 119 120
designation (121)
    on left: 121, on right: 117 120
designator_list (122)
    on left: 122 123, on right: 121 123
designator (123)
    on left: 124 125, on right: 122 123
statement (124)
    on left: 126 127 128 129 130 131, on right: 132 133 134 141 143
    144 145 146 147 148 149
labeled_statement (125)
    on left: 132 133 134, on right: 126
compound_statement (126)
    on left: 135, on right: 127 161 162
block_item_list_opt (127)
    on left: 136 137, on right: 135
block_item_list (128)
    on left: 138 139, on right: 137 139
block_item (129)
    on left: 140 141, on right: 138 139
expression_statement (130)
    on left: 142, on right: 128 148 149
selection_statement (131)
    on left: 143 144 145, on right: 129
iteration_statement (132)
    on left: 146 147 148 149, on right: 130
jump_statement (133)
    on left: 150 151 152 153 154, on right: 131
expression_opt (134)
    on left: 155 156, on right: 148 149
translation_unit (135)
    on left: 157 158, on right: 0 158
external_declaration (136)
    on left: 159 160, on right: 157 158
function_definition (137)
    on left: 161 162, on right: 159
declaration_list (138)
    on left: 163 164, on right: 161 164
O (139)
    on left: 165, on right: 162


State 0

    0 $accept: . translation_unit $end

    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    SHORT     shift, and go to state 3
    LONG      shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    VOID      shift, and go to state 9
    BOOL      shift, and go to state 10
    MATRIX    shift, and go to state 11

    declaration             go to state 12
    declaration_specifiers  go to state 13
    type_specifier          go to state 14
    translation_unit        go to state 15
    external_declaration    go to state 16
    function_definition     go to state 17


State 1

   84 type_specifier: CHAR .

    $default  reduce using rule 84 (type_specifier)


State 2

   89 type_specifier: DOUBLE .

    $default  reduce using rule 89 (type_specifier)


State 3

   85 type_specifier: SHORT .

    $default  reduce using rule 85 (type_specifier)


State 4

   87 type_specifier: LONG .

    $default  reduce using rule 87 (type_specifier)


State 5

   88 type_specifier: FLOAT .

    $default  reduce using rule 88 (type_specifier)


State 6

   86 type_specifier: INT .

    $default  reduce using rule 86 (type_specifier)


State 7

   91 type_specifier: SIGNED .

    $default  reduce using rule 91 (type_specifier)


State 8

   92 type_specifier: UNSIGNED .

    $default  reduce using rule 92 (type_specifier)


State 9

   83 type_specifier: VOID .

    $default  reduce using rule 83 (type_specifier)


State 10

   93 type_specifier: BOOL .

    $default  reduce using rule 93 (type_specifier)


State 11

   90 type_specifier: MATRIX .

    $default  reduce using rule 90 (type_specifier)


State 12

  160 external_declaration: declaration .

    $default  reduce using rule 160 (external_declaration)


State 13

   75 declaration: declaration_specifiers . SEMI_COLON
   76            | declaration_specifiers . init_declarator_list SEMI_COLON
  161 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  162                    | declaration_specifiers . declarator O compound_statement

    IDENTIFIER        shift, and go to state 18
    LEFT_ROUND_BRACE  shift, and go to state 19
    MULTIPLY          shift, and go to state 20
    SEMI_COLON        shift, and go to state 21

    init_declarator_list  go to state 22
    init_declarator       go to state 23
    declarator            go to state 24
    direct_declarator     go to state 25
    pointer               go to state 26


State 14

   77 declaration_specifiers: type_specifier .
   78                       | type_specifier . declaration_specifiers

    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    SHORT     shift, and go to state 3
    LONG      shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    VOID      shift, and go to state 9
    BOOL      shift, and go to state 10
    MATRIX    shift, and go to state 11

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers  go to state 27
    type_specifier          go to state 14


State 15

    0 $accept: translation_unit . $end
  158 translation_unit: translation_unit . external_declaration

    $end      shift, and go to state 28
    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    SHORT     shift, and go to state 3
    LONG      shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    VOID      shift, and go to state 9
    BOOL      shift, and go to state 10
    MATRIX    shift, and go to state 11

    declaration             go to state 12
    declaration_specifiers  go to state 13
    type_specifier          go to state 14
    external_declaration    go to state 29
    function_definition     go to state 17


State 16

  157 translation_unit: external_declaration .

    $default  reduce using rule 157 (translation_unit)


State 17

  159 external_declaration: function_definition .

    $default  reduce using rule 159 (external_declaration)


State 18

   96 direct_declarator: IDENTIFIER .

    $default  reduce using rule 96 (direct_declarator)


State 19

   97 direct_declarator: LEFT_ROUND_BRACE . declarator RIGHT_ROUND_BRACE

    IDENTIFIER        shift, and go to state 18
    LEFT_ROUND_BRACE  shift, and go to state 19
    MULTIPLY          shift, and go to state 20

    declarator         go to state 30
    direct_declarator  go to state 25
    pointer            go to state 26


State 20

  104 pointer: MULTIPLY .
  105        | MULTIPLY . pointer

    MULTIPLY  shift, and go to state 20

    $default  reduce using rule 104 (pointer)

    pointer  go to state 31


State 21

   75 declaration: declaration_specifiers SEMI_COLON .

    $default  reduce using rule 75 (declaration)


State 22

   76 declaration: declaration_specifiers init_declarator_list . SEMI_COLON
   80 init_declarator_list: init_declarator_list . COMMA init_declarator

    SEMI_COLON  shift, and go to state 32
    COMMA       shift, and go to state 33


State 23

   79 init_declarator_list: init_declarator .

    $default  reduce using rule 79 (init_declarator_list)


State 24

   81 init_declarator: declarator .
   82                | declarator . EQUAL initializer
  161 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  162                    | declaration_specifiers declarator . O compound_statement

    CHAR      shift, and go to state 1
    DOUBLE    shift, and go to state 2
    SHORT     shift, and go to state 3
    LONG      shift, and go to state 4
    FLOAT     shift, and go to state 5
    INT       shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    VOID      shift, and go to state 9
    BOOL      shift, and go to state 10
    MATRIX    shift, and go to state 11
    EQUAL     shift, and go to state 34

    LEFT_CURLY_BRACE  reduce using rule 165 (O)
    $default          reduce using rule 81 (init_declarator)

    declaration             go to state 35
    declaration_specifiers  go to state 36
    type_specifier          go to state 14
    declaration_list        go to state 37
    O                       go to state 38


State 25

   95 declarator: direct_declarator .
   98 direct_declarator: direct_declarator . LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE
   99                  | direct_declarator . LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE
  100                  | direct_declarator . LEFT_SQUARE_BRACE RIGHT_SQUARE_BRACE
  101                  | direct_declarator . LEFT_ROUND_BRACE parameter_type_list RIGHT_ROUND_BRACE
  102                  | direct_declarator . LEFT_ROUND_BRACE identifier_list RIGHT_ROUND_BRACE
  103                  | direct_declarator . LEFT_ROUND_BRACE RIGHT_ROUND_BRACE

    LEFT_SQUARE_BRACE  shift, and go to state 39
    LEFT_ROUND_BRACE   shift, and go to state 40

    $default  reduce using rule 95 (declarator)


State 26

   94 declarator: pointer . direct_declarator

    IDENTIFIER        shift, and go to state 18
    LEFT_ROUND_BRACE  shift, and go to state 19

    direct_declarator  go to state 41


State 27

   78 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 78 (declaration_specifiers)


State 28

    0 $accept: translation_unit $end .

    $default  accept


State 29

  158 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 158 (translation_unit)


State 30

   97 direct_declarator: LEFT_ROUND_BRACE declarator . RIGHT_ROUND_BRACE

    RIGHT_ROUND_BRACE  shift, and go to state 42


State 31

  105 pointer: MULTIPLY pointer .

    $default  reduce using rule 105 (pointer)


State 32

   76 declaration: declaration_specifiers init_declarator_list SEMI_COLON .

    $default  reduce using rule 76 (declaration)


State 33

   80 init_declarator_list: init_declarator_list COMMA . init_declarator

    IDENTIFIER        shift, and go to state 18
    LEFT_ROUND_BRACE  shift, and go to state 19
    MULTIPLY          shift, and go to state 20

    init_declarator    go to state 43
    declarator         go to state 44
    direct_declarator  go to state 25
    pointer            go to state 26


State 34

   82 init_declarator: declarator EQUAL . initializer

    IDENTIFIER        shift, and go to state 45
    INT_NO            shift, and go to state 46
    FLOAT_NO          shift, and go to state 47
    CHARACTER         shift, and go to state 48
    STRING            shift, and go to state 49
    LEFT_ROUND_BRACE  shift, and go to state 50
    LEFT_CURLY_BRACE  shift, and go to state 51
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    AMPERSAND         shift, and go to state 54
    MULTIPLY          shift, and go to state 55
    ADD               shift, and go to state 56
    SUBTRACT          shift, and go to state 57

    primary_expression         go to state 58
    postfix_expression         go to state 59
    unary_expression           go to state 60
    unary_operator             go to state 61
    cast_expression            go to state 62
    multiplicative_expression  go to state 63
    additive_expression        go to state 64
    shift_expression           go to state 65
    relational_expression      go to state 66
    equality_expression        go to state 67
    AND_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_AND_expression     go to state 71
    logical_OR_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 74
    initializer                go to state 75


State 35

  163 declaration_list: declaration .

    $default  reduce using rule 163 (declaration_list)


State 36

   75 declaration: declaration_specifiers . SEMI_COLON
   76            | declaration_specifiers . init_declarator_list SEMI_COLON

    IDENTIFIER        shift, and go to state 18
    LEFT_ROUND_BRACE  shift, and go to state 19
    MULTIPLY          shift, and go to state 20
    SEMI_COLON        shift, and go to state 21

    init_declarator_list  go to state 22
    init_declarator       go to state 23
    declarator            go to state 44
    direct_declarator     go to state 25
    pointer               go to state 26


State 37

  161 function_definition: declaration_specifiers declarator declaration_list . compound_statement
  164 declaration_list: declaration_list . declaration

    CHAR              shift, and go to state 1
    DOUBLE            shift, and go to state 2
    SHORT             shift, and go to state 3
    LONG              shift, and go to state 4
    FLOAT             shift, and go to state 5
    INT               shift, and go to state 6
    SIGNED            shift, and go to state 7
    UNSIGNED          shift, and go to state 8
    VOID              shift, and go to state 9
    BOOL              shift, and go to state 10
    MATRIX            shift, and go to state 11
    LEFT_CURLY_BRACE  shift, and go to state 76

    declaration             go to state 77
    declaration_specifiers  go to state 36
    type_specifier          go to state 14
    compound_statement      go to state 78


State 38

  162 function_definition: declaration_specifiers declarator O . compound_statement

    LEFT_CURLY_BRACE  shift, and go to state 76

    compound_statement  go to state 79


State 39

   98 direct_declarator: direct_declarator LEFT_SQUARE_BRACE . assignment_expression RIGHT_SQUARE_BRACE
   99                  | direct_declarator LEFT_SQUARE_BRACE . assignment_expression RIGHT_SQUARE_BRACE LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE
  100                  | direct_declarator LEFT_SQUARE_BRACE . RIGHT_SQUARE_BRACE

    IDENTIFIER          shift, and go to state 45
    INT_NO              shift, and go to state 46
    FLOAT_NO            shift, and go to state 47
    CHARACTER           shift, and go to state 48
    STRING              shift, and go to state 49
    RIGHT_SQUARE_BRACE  shift, and go to state 80
    LEFT_ROUND_BRACE    shift, and go to state 50
    INCREMENT           shift, and go to state 52
    DECREMENT           shift, and go to state 53
    AMPERSAND           shift, and go to state 54
    MULTIPLY            shift, and go to state 55
    ADD                 shift, and go to state 56
    SUBTRACT            shift, and go to state 57

    primary_expression         go to state 58
    postfix_expression         go to state 59
    unary_expression           go to state 60
    unary_operator             go to state 61
    cast_expression            go to state 62
    multiplicative_expression  go to state 63
    additive_expression        go to state 64
    shift_expression           go to state 65
    relational_expression      go to state 66
    equality_expression        go to state 67
    AND_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_AND_expression     go to state 71
    logical_OR_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 81


State 40

  101 direct_declarator: direct_declarator LEFT_ROUND_BRACE . parameter_type_list RIGHT_ROUND_BRACE
  102                  | direct_declarator LEFT_ROUND_BRACE . identifier_list RIGHT_ROUND_BRACE
  103                  | direct_declarator LEFT_ROUND_BRACE . RIGHT_ROUND_BRACE

    CHAR               shift, and go to state 1
    DOUBLE             shift, and go to state 2
    SHORT              shift, and go to state 3
    LONG               shift, and go to state 4
    FLOAT              shift, and go to state 5
    INT                shift, and go to state 6
    SIGNED             shift, and go to state 7
    UNSIGNED           shift, and go to state 8
    VOID               shift, and go to state 9
    BOOL               shift, and go to state 10
    MATRIX             shift, and go to state 11
    IDENTIFIER         shift, and go to state 82
    RIGHT_ROUND_BRACE  shift, and go to state 83

    declaration_specifiers  go to state 84
    type_specifier          go to state 14
    parameter_type_list     go to state 85
    parameter_list          go to state 86
    parameter_declaration   go to state 87
    identifier_list         go to state 88


State 41

   94 declarator: pointer direct_declarator .
   98 direct_declarator: direct_declarator . LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE
   99                  | direct_declarator . LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE LEFT_SQUARE_BRACE assignment_expression RIGHT_SQUARE_BRACE
  100                  | direct_declarator . LEFT_SQUARE_BRACE RIGHT_SQUARE_BRACE
  101                  | direct_declarator . LEFT_ROUND_BRACE parameter_type_list RIGHT_ROUND_BRACE
  102                  | direct_declarator . LEFT_ROUND_BRACE identifier_list RIGHT_ROUND_BRACE
  103                  | direct_declarator . LEFT_ROUND_BRACE RIGHT_ROUND_BRACE

    LEFT_SQUARE_BRACE  shift, and go to state 39
    LEFT_ROUND_BRACE   shift, and go to state 40

    $default  reduce using rule 94 (declarator)


State 42

   97 direct_declarator: LEFT_ROUND_BRACE declarator RIGHT_ROUND_BRACE .

    $default  reduce using rule 97 (direct_declarator)


State 43

   80 init_declarator_list: init_declarator_list COMMA init_declarator .

    $default  reduce using rule 80 (init_declarator_list)


State 44

   81 init_declarator: declarator .
   82                | declarator . EQUAL initializer

    EQUAL  shift, and go to state 34

    $default  reduce using rule 81 (init_declarator)


State 45

    3 primary_expression: IDENTIFIER .

    $default  reduce using rule 3 (primary_expression)


State 46

    4 primary_expression: INT_NO .

    $default  reduce using rule 4 (primary_expression)


State 47

    5 primary_expression: FLOAT_NO .

    $default  reduce using rule 5 (primary_expression)


State 48

    6 primary_expression: CHARACTER .

    $default  reduce using rule 6 (primary_expression)


State 49

    7 primary_expression: STRING .

    $default  reduce using rule 7 (primary_expression)


State 50

    8 primary_expression: LEFT_ROUND_BRACE . expression RIGHT_ROUND_BRACE

    IDENTIFIER        shift, and go to state 45
    INT_NO            shift, and go to state 46
    FLOAT_NO          shift, and go to state 47
    CHARACTER         shift, and go to state 48
    STRING            shift, and go to state 49
    LEFT_ROUND_BRACE  shift, and go to state 50
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    AMPERSAND         shift, and go to state 54
    MULTIPLY          shift, and go to state 55
    ADD               shift, and go to state 56
    SUBTRACT          shift, and go to state 57

    primary_expression         go to state 58
    postfix_expression         go to state 59
    unary_expression           go to state 60
    unary_operator             go to state 61
    cast_expression            go to state 62
    multiplicative_expression  go to state 63
    additive_expression        go to state 64
    shift_expression           go to state 65
    relational_expression      go to state 66
    equality_expression        go to state 67
    AND_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_AND_expression     go to state 71
    logical_OR_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 89
    expression                 go to state 90


State 51

  114 initializer: LEFT_CURLY_BRACE . initializer_row_list RIGHT_CURLY_BRACE

    IDENTIFIER         shift, and go to state 45
    INT_NO             shift, and go to state 46
    FLOAT_NO           shift, and go to state 47
    CHARACTER          shift, and go to state 48
    STRING             shift, and go to state 49
    LEFT_SQUARE_BRACE  shift, and go to state 91
    LEFT_ROUND_BRACE   shift, and go to state 50
    LEFT_CURLY_BRACE   shift, and go to state 51
    PERIOD             shift, and go to state 92
    INCREMENT          shift, and go to state 52
    DECREMENT          shift, and go to state 53
    AMPERSAND          shift, and go to state 54
    MULTIPLY           shift, and go to state 55
    ADD                shift, and go to state 56
    SUBTRACT           shift, and go to state 57

    primary_expression         go to state 58
    postfix_expression         go to state 59
    unary_expression           go to state 60
    unary_operator             go to state 61
    cast_expression            go to state 62
    multiplicative_expression  go to state 63
    additive_expression        go to state 64
    shift_expression           go to state 65
    relational_expression      go to state 66
    equality_expression        go to state 67
    AND_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_AND_expression     go to state 71
    logical_OR_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 74
    initializer                go to state 93
    initializer_row_list       go to state 94
    initializer_row            go to state 95
    designation                go to state 96
    designator_list            go to state 97
    designator                 go to state 98


State 52

   21 unary_expression: INCREMENT . unary_expression

    IDENTIFIER        shift, and go to state 45
    INT_NO            shift, and go to state 46
    FLOAT_NO          shift, and go to state 47
    CHARACTER         shift, and go to state 48
    STRING            shift, and go to state 49
    LEFT_ROUND_BRACE  shift, and go to state 50
    INCREMENT         shift, and go to state 52
    DECREMENT         shift, and go to state 53
    AMPERSAND         shift, and go to state 54
    MULTIPLY          shift, and go to state 55
    ADD               shift, and go to state 56
    SUBTRACT          shift, and go to state 57

    primary_expression  go to state 58
    postfix_expression  go to state 59
    unary_expression    go to state 99
    unary_operator      go to state 61


State 53

   22 unary_expression: DECREMENT . unary_expression
